--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 
+<div class="col col-12 border">
     <h2>Login</h2>
 
     {% if message %}
@@ -20,5 +21,5 @@
     </form>
 
     Don't have an account? <a href="{% url 'register' %}">Register here.</a>
-
+</div>
 {% endblock %}
