--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -8,11 +8,10 @@
 
 /* body */
 .main{
-    margin: 20px 10% 20px 10%;
     padding: 0px 0px;
 }
 .row{
-    margin: 0px 0px
+    margin: 30px 0px;
 }
 
 /* main */
