--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -41,8 +41,8 @@
             </div>
           </nav>
         
-        <div class="main container">
-            <div class="row">
+        <div class="main container-fluid">
+            <div class="row justify-content-center">
                 {% block body %}
                 {% endblock %}
             </div>
