--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <!-- New Post form -->
-<div id="posts-wrapper" class="col-6">
+<div id="posts-wrapper" class="row">
     <div class="col col-12 border">
         <h4>New Post:</h4>
         <form id="new-post-form">
@@ -13,10 +13,10 @@
         </form>
     </div>
 </div>
-<div id="following-wrapper" class="col-12">
+<div id="following-wrapper" class="row">
     Implement Following here
 </div>
-<div id="user-wrapper" class="col-12">
+<div id="user-wrapper" class="row">
     Implement User here
 </div>
 {% endblock %}
