--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -41,11 +41,9 @@
             </div>
           </nav>
         
-        <div class="main container-fluid">
-            <div class="row justify-content-center">
-                {% block body %}
-                {% endblock %}
-            </div>
+        <div class="main container-fluid d-flex justify-content-center">
+            {% block body %}
+            {% endblock %}
         </div>
     </body>
 </html>
