Flex grid changed

--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -41,7 +41,7 @@
             </div>
           </nav>
         
-        <div class="main container-fluid d-flex justify-content-center">
+        <div class="main container-fluid">
             {% block body %}
             {% endblock %}
         </div>
