--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -2,21 +2,24 @@
 
 {% block body %}
 <!-- New Post form -->
-<div id="posts-wrapper" class="row">
-    <div class="col col-12 border">
-        <h4>New Post:</h4>
-        <form id="new-post-form">
-            <div class="form-group" id="new-post-form">
-                <input required autocomplete="off" id="new-post-body"class="form-control" type="text" placeholder="What are you thinking today?">
-            </div>
-            <input class="btn btn-primary" id="submit" type="submit" value="Post">
-        </form>
+<div class="row">
+    <div class="col-3"></div>
+    <!-- Posts view -->
+    <div class="col-6" id="posts-wrapper">
+        <div id="col_form"class="col col-12 border">
+            <h4>New Post:</h4>
+            <form id="new-post-form">
+                <div class="form-group" id="new-post-form">
+                    <input required autocomplete="off" id="new-post-body"class="form-control" type="text" placeholder="What are you thinking today?">
+                </div>
+                <input class="btn btn-primary" id="submit" type="submit" value="Post">
+            </form>
+        </div>
     </div>
-</div>
-<div id="following-wrapper" class="row">
-    Implement Following here
-</div>
-<div id="user-wrapper" class="row">
-    Implement User here
+    <!-- Following view -->
+    <div class="col-6" id="following-wrapper">Implement Following here</div>
+    <!-- User view -->
+    <div class="col-6" id="user-wrapper">Implement User here</div>
+    <div class="col-3"></div>
 </div>
 {% endblock %}
