--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -8,7 +8,7 @@
     <div class="col-6" id="posts-wrapper">
         <div id="col_form"class="col col-12 border">
             <h4>New Post:</h4>
-            <form id="new-post-form">
+            <form id="new-post-form" action="" method='POST'>
                 <div class="form-group" id="new-post-form">
                     <input required autocomplete="off" id="new-post-body"class="form-control" type="text" placeholder="What are you thinking today?">
                 </div>
