--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -20,3 +20,40 @@
     border-radius: 15px;
     margin: 10px 0px;
 }
+
+/* post styling */
+/* user */
+[data-section="0"] > a{
+    color: black;
+   font-weight: 600;
+}
+/* body */
+[data-section="1"] {
+    font-family: Helvetica, sans-serif;
+    
+}
+/* timestamp */
+[data-section="2"] {
+    color: rgb(91, 112, 131)
+   
+}
+/* likes */
+[data-section="3"] {
+   
+}
+/* comments */
+[data-section="4"] {
+   
+}
+
+svg{
+    height: 19.2px;
+    width: 19.2px;
+    fill: white;
+    stroke: red;
+    stroke-width: 4px;
+}
+svg:hover{
+    fill: red;
+    cursor: pointer;
+}
