--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -30,5 +30,12 @@
         Q 90,60 50,90
         Q 10,60 10,30 z"/>
     </svg>
+    <!-- edit form -->
+    <form style="display: none" action="" method='POST' class="edit-form">
+        <div class="form-group" id="new-post-form">
+            <textarea class="form-control" name="body" rows="4" cols="50"></textarea>
+        </div>
+        <input class="btn btn-link" id="submit" type="submit" value="Save">
+    </form>
 </div>
 {% endblock %}
