cancel edit button implemented

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -35,7 +35,8 @@
         <div class="form-group" id="new-post-form">
             <textarea class="form-control" name="body" rows="4" cols="50"></textarea>
         </div>
-        <input class="btn btn-link" id="submit" type="submit" value="Save">
+        <input class="btn btn-link"  type="submit" value="Save">
+        <input class="btn btn-link cancel-btn"  type="button" value="Cancel">
     </form>
 </div>
 {% endblock %}
