--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -22,8 +22,8 @@
     <div class="col-6" id="user-wrapper">Implement User here</div>
     <div class="col-3">
     </div>
-    <!-- heart icon -->
-    <svg style="display: none" viewBox="0 0 100 100" class="heart-button">
+    <!-- like icon -->
+    <svg style="display: none" viewBox="0 0 100 100" class="like-btn">
         <path d="M 10,30
         A 20,20 0,0,1 50,30
         A 20,20 0,0,1 90,30
