Followers and following counter implemented w js

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -22,8 +22,8 @@
     <div class="col-6" id="user-wrapper">
         <h2 id="profile-name">First and Last Name</h2>
         <h6 id="profile-username">@username</h6>
-        <div id="stats">
-            <span> <b>nFollowers</b> followers</span> <span><b>nFollowing</b> following</span>
+        <div id="profile-stats">
+            <span id="profile-nFollowers"></span><span id="profile-nFollowing"></span>
         </div>
         <!-- {% if not request.user == profile_user%}
             {% if profile_user not in following %}
