Follow button logic almost completed

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -25,13 +25,7 @@
         <div id="profile-stats">
             <span id="profile-nFollowers"></span><span id="profile-nFollowing"></span>
         </div>
-        <!-- {% if not request.user == profile_user%}
-            {% if profile_user not in following %}
-            <button id="Follow button" class="btn btn-primary"> Follow</button>
-            {% else %}
-            <button id="Unfollow button" class="btn btn-primary"> Unfollow</button>
-            {% endif%}
-        {% endif %} -->
+        <button id="follow-btn" class="btn btn-primary"></button>
         <!-- Posts wrapper -->
         <div class="col-6" id="posts-wrapper">
             <div id="col_form"class="col col-12 border">
