--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -25,20 +25,9 @@
         <div id="profile-stats">
             <span id="profile-nFollowers"></span><span id="profile-nFollowing"></span>
         </div>
-        <button id="follow-btn" class="btn btn-primary"></button>
+        <button style="display: none" id="follow-btn" class="btn btn-primary"></button>
         <!-- Posts wrapper -->
-        <div class="col-6" id="posts-wrapper">
-            <div id="col_form"class="col col-12 border">
-                <!-- New Post form -->
-                <h5>New Post:</h5>
-                <form id="new-post-form" action="" method='POST'>
-                    <div class="form-group" id="new-post-form">
-                        <input required autocomplete="off" id="new-post-body"class="form-control" type="text" placeholder="What are you thinking today?">
-                    </div>
-                    <input class="btn btn-primary" id="submit" type="submit" value="Post">
-                </form>
-            </div>
-        </div>
+        <div class="col-6" id="posts-wrapper"> </div>
     </div>
     <div class="col-3">
     </div>
