Profile style updated, todo: implement follow func

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -4,7 +4,7 @@
 <!-- New Post form -->
 <div class="row">
     <!-- User view -->
-    <div class="col-12" id="user-wrapper">
+    <div class="col-12 text-center" id="user-wrapper">
         <h2 id="profile-name">First and Last Name</h2>
         <h6 id="profile-username">@username</h6>
         <div id="profile-stats">
