Follow btn listener implemented

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -8,7 +8,8 @@
         <h2 id="profile-name">First and Last Name</h2>
         <h6 id="profile-username">@username</h6>
         <div id="profile-stats">
-            <span id="profile-nFollowers"></span><span id="profile-nFollowing"></span>
+            <span class="counter" id="profile-nFollowers"></span><span> Followers</span>
+            <span class="counter" id="profile-nFollowing"></span><span> Following</span>
         </div>
         <button style="display: none" id="follow-btn" class="btn btn-primary"></button>
     </div>
