--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -35,6 +35,19 @@
     <!-- Posts wrapper -->
     <div id="posts-wrapper" class="col-12" ></div>
 
+    <!-- Paginator wrapper -->
+    <div id="paginator-wrapper" class="col-12 d-flex justify-content-center">
+        <nav aria-label="...">
+            <ul class="pagination">
+                <li class="page-item disabled"><a class="page-link" aria-disabled="true">Previous</a></li>
+                <li class="page-item disabled"><a class="page-link">1</a></li>
+                <li class="page-item disabled active" aria-current="page"><a class="page-link">2 <span class="sr-only">(current)</span></a></li>
+                <li class="page-item disabled"><a class="page-link">3</a></li>
+                <li class="page-item disabled"><a href="#"class="page-link">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <!-- Templates -->
     <div style="display: none" class="templates">
         <!-- like icon -->
