--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="col col-12 border">
+<div class="col col-6 mx-auto mt-5 border">
     <h2>Login</h2>
 
     {% if message %}
@@ -11,15 +11,16 @@
 
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="form-group pt-1">
             <input autocomplete="off" autofocus class="form-control" type="text" name="username" placeholder="Username">
         </div>
-        <div class="form-group">
+        <div class="form-group pt-1">
             <input autocomplete="off" class="form-control" type="password" name="password" placeholder="Password">
         </div>
         <input class="btn btn-primary" type="submit" value="Login">
     </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    <div class="pt-1">
+        Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    </div>
 </div>
 {% endblock %}
