--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="col col-12 border">
+<div class="col col-6 mx-auto mt-5 border">
     <h2>Register</h2>
 
     {% if message %}
@@ -11,21 +11,29 @@
 
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
-        <div class="form-group">
-            <input autocomplete="off" class="form-control" autofocus type="text" name="username" placeholder="Username">
+        <div class="form-group pt-1">
+            <input required autocomplete="off" class="form-control" autofocus type="text" name="first_name" placeholder="First Name">
         </div>
-        <div class="form-group">
-            <input autocomplete="off" class="form-control" type="email" name="email" placeholder="Email Address">
+        <div class="form-group pt-1">
+            <input required autocomplete="off" class="form-control" autofocus type="text" name="last_name" placeholder="Last Name">
         </div>
-        <div class="form-group">
-            <input autocomplete="off" class="form-control" type="password" name="password" placeholder="Password">
+        <div class="form-group pt-1">
+            <input required autocomplete="off" class="form-control" autofocus type="text" name="username" placeholder="Username">
         </div>
-        <div class="form-group">
-            <input autocomplete="off" class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+        <div class="form-group pt-1">
+            <input required autocomplete="off" class="form-control" type="email" name="email" placeholder="Email Address">
+        </div>
+        <hr>
+        <div class="form-group pt-1">
+            <input required autocomplete="off" class="form-control" type="password" name="password" placeholder="Password">
+        </div>
+        <div class="form-group pt-1">
+            <input required autocomplete="off" class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
         <input class="btn btn-primary" type="submit" value="Register">
     </form>
-
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    <div class="pt-1">
+        Already have an account? <a href="{% url 'login' %}">Log in here.</a>
+    </div>
 </div>
 {% endblock %}
